tests/baselines/reference/pathMappingBasedModuleResolution1_amd.errors.txt
c:/root/tsconfig.json(2,5): error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
c:/root/tsconfig.json(5,17): error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
c:/root/tsconfig.json(6,17): error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?


==== c:/root/tsconfig.json (3 errors) ====
    {
        "compilerOptions": {
        ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
            "paths": {
                "*": [
                    "*",
                    ~~~
!!! error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
                    "generated/*"
                    ~~~~~~~~~~~~~
!!! error TS5090: Non-relative paths are not allowed when 'baseUrl' is not set. Did you forget a leading './'?
                ]
            }
        }
    }
    
==== c:/root/f1.ts (0 errors) ====
    export var x = 1;
    